# mcp-vs-cli-benchmark

./: .env.example  .gitignore  METHODOLOGY.md  README.md  pyproject.toml
docs/: 2026-03-08-mcp-vs-cli-benchmark-design.md
docs/plans/: 2026-03-08-implementation-plan.md
results/charts/: completion_rate.html  dashboard.html  latency_box_plot.html  token_comparison.html  tool_calls.html
results/raw/: 03740d7b-e933-46d2-9a75-983b65ef99ba.json  05ac6ca7-751d-4a26-8682-22f192a9fbab.json  0796c06e-b39c-414d-a70d-b99eb65dab1c.json  09cdd939-cadc-4f55-815c-119c001d6168.json  0dc19b71-b812-4ad4-a185-622ae665f3c6.json  0ec49633-7fba-4381-8fe7-d39e4c68a470.json  11a1e1c0-7b55-42ef-8dbb-4b5509ac82b3.json  1323c144-02ea-4797-b3f2-232dd1ff8927.json  1669fbff-7240-4d7d-8765-1119a6d0969b.json  1772f536-3c2a-4e81-9237-e5a66f0ea647.json  19665f55-bcc4-470b-b172-4cd5f68b7008.json  19ae2cdd-7da4-4fc0-8702-bad267676ec4.json  1f6afc32-b838-4ae5-b871-2902a292183e.json  29817668-321d-4dc8-b7dc-5532536e3b7c.json  2bc59f8a-6410-4f37-8b0b-c21570b31dad.json  30c8da73-27d4-4cc6-86a7-53c922a21d8c.json  34586da6-3232-48a6-a79c-5ebbe6c500f5.json  3d60e587-303e-440a-893d-82c37907bee9.json  3f538412-5196-4a83-aa61-a685f167f0f5.json  43417d5d-5234-44a8-91eb-8e2bcc22c350.json  43c26ef9-efcd-4d8d-94d3-d489cbde8b90.json  4f4edbaf-820e-41ce-8f7f-aac57bbcba9d.json  4f8b859c-6666-430c-b4c3-a336aaec1d85.json  52418b6b-a136-49b8-889a-9acf55e37d18.json  56576359-4e16-4c4c-b30c-0857735a7f88.json  (+43 more)
results/reports/: report.md
scripts/: test_integration.py  test_mcp_vs_cli.py
tests/: test_smoke.py
(+39 files in other folders)
