[project]
name = "mcp-vs-cli-benchmark"
version = "0.1.0"
description = "Rigorous benchmark comparing MCP servers vs CLI tools for AI agents"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.55",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.14",
    "plotly>=5.24",
    "pandas>=2.2",
    "mcp>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
bench = "benchmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
